<resources>
    <string name="app_name">Proyecto_final_apps</string>
    <string name="home">Home</string>
    <string name="nuevo">Nuevo</string>
    <string name="contacts">Contactos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="placeholder_usuario">Usuario</string>
    <string name="placeholder_password">Contraseña</string>
    <string name="aun_no_tienes_una_cuenta">¿Aún no tienes una cuenta?</string>
    <string name="registrate">Registrate</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="develop_fullname">Diego Aquino</string>
    <string name="balance_general">Balance General</string>
    <string name="develop_general_balance">Q 5,295.59</string>
    <string name="ver_detalles">ver detalles</string>
    <string name="operaciones_recientes">Operaciones Recientes</string>
    <string name="ver_todo">Ver todo</string>
    <string name="operation_item_amount">%s %s</string>
    <string name="pagos_pendientes">Pagos pendientes</string>
    <string name="cuentas_disponibles">Cuentas Disponibles</string>
    <string name="default_label">Cuenta default: %s</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="develop_user_alias">/@Aq202</string>
    <string name="money_format">Q. %s</string>
    <string name="cents_format">.%s</string>
    <string name="registro_de_operaciones">Registro de operaciones</string>
    <string name="placeholder_nombre">Nombre</string>
    <string name="placeholder_apellido">Apellido</string>
    <string name="registrarse">Registrarse</string>
    <string name="ya_tienes_una_cuenta">¿Ya tienes una cuenta?</string>
    <string name="inicia_sesion">Inicia sesión</string>
    <string name="placeholder_monto">Monto</string>
    <string name="add_account">Agregar cuenta</string>
    <string name="date_filter_format">%s al %s</string>
    <string name="nueva_cuenta">Nueva cuenta</string>
    <string name="develop_user_name">Diego</string>
    <string name="develop_user_lastName">Aquino</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="develop_user_email">mor21762@uvg.edu.gt</string>
    <string name="contactos">Contactos</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="tab_new">Nuevo</string>
    <string name="tab_favorites">Favoritos</string>
    <string name="hint_source_account">Cuenta de origen</string>
    <string name="txt_source_account">Cuenta de origen:</string>
    <string name="txt_amount">Monto:</string>
    <string name="hint_amount">Monto</string>
    <string name="txt_operation_type">Tipo de operación:</string>
    <string name="hint_operation_type">Ingreso/Egreso</string>
    <string name="txt_description">Descripción:</string>
    <string name="hint_description">Descripción de la operación</string>
    <string name="txt_cathegory">Categoría:</string>
    <string name="resultados_de_busqueda">Resultados de búsqueda</string>
    <string name="txt_checkAsFavorite">Marcar como favorito</string>
    <string name="btn_add_operation">Añadir</string>
    <string name="cuenta_de_origen">Cuenta de origen:</string>
    <string name="cuenta_destino">Cuenta destino:</string>
    <string name="description">Descripción:</string>
    <string name="placeholder_description">Descripción</string>
    <string name="terminar">Terminar</string>
    <string name="placeholder_confirm_pass">Confirmar contraseña</string>
    <string name="tipo_de_operacion">Tipo de operación</string>
    <string name="monto">Monto:</string>
    <string name="placeholder_cuenta_de_origen">Cuenta de origen</string>
    <string name="placeholder_category">Categoría</string>
    <string name="placeholder_date">Fecha</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="email">Correo electrónico</string>
    <string name="placeholder_notification_date">Fecha de notificación</string>
    <string name="default_account_disclaimer">Esta acción convertirá a esta cuenta en la única cuenta por defecto</string>
    <string name="pending_payment_disclaimer">Para finalizar la operación y agregarla a tu registro, selecciona la cuenta de origen de la misma:</string>
    <string name="finalizar_pago">Finalizar pago</string>
    <string name="fab_new_operation">Nueva operación</string>
    <string name="pagos_pendientes_por_cargar">Pagos pendientes por cargar</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="deshacer_cambios">Deshacer cambios</string>
    <string name="btn_update_operation">Actualizar</string>
    <string name="txt_notification_date">Programar notificación:</string>
    <string name="hint_notificationDate">dd/mm/aaaa</string>
    <string name="pending_payment_description">Los pagos pendientes te permiten generar recordatorios en la pagina principal y realizar posteriormente dichas operaciones de manera rápida y sencilla.</string>
    <string name="ingreso">Ingreso</string>
    <string name="egreso">Egreso</string>
    <string name="sin_descripcion">Sin descripción</string>
    <string name="que_quiero_hacer">¿Qué quiero hacer?</string>
    <string name="nueva_operacion">NUEVA\nOPERACIÓN</string>
    <string name="transferir_fondos">TRANSFERIR\nFONDOS</string>
    <string name="pago_pendiente">PAGO\nPENDIENTE</string>
    <string name="nueva_deuda_uppercase">NUEVA\nDEUDA</string>
    <string name="alias_format">\@%s</string>
    <string name="anadir_usuario">Añadir usuario</string>
    <string name="deudas_realizadas">Deudas realizadas</string>
    <string name="txt_user">Usuario deudor</string>
    <string name="txt_destiny_account">Cuenta destino:</string>
    <string name="hint_destiny_account">Cuenta destino</string>
    <string name="hint_user">Usuario</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="eliminar_contacto">Eliminar contacto</string>
    <string name="fullName_template">%s %s</string>
    <string name="default_balance">Q 0.00</string>
    <string name="no_hay_operaciones_a_mostrar">No hay operaciones a mostrar.</string>
    <string name="sin_resultados">Sin resultados.</string>
    <string name="no_hubo_gastos">No se encontraron\ngastos</string>
    <string name="no_hubo_ingresos">No se encontraron\ningresos</string>
    <string name="nombre_de_la_cuenta">Nombre de la cuenta:</string>
    <string name="fondos_actuales">Fondos actuales:</string>
    <string name="cuenta_por_defecto">Cuenta por defecto:</string>
    <string name="editar_cuenta">Editar cuenta</string>
    <string name="no_se_encontraron_resultados">No se encontraron\nresultados</string>
    <string name="active_debt_title">Deuda de %s</string>
    <string name="passive_debt_title">Deuda con %s</string>
    <string name="deudas_por_aceptar">Deudas por aceptar</string>
    <string name="ocurrio_un_error">Ocurrió un error</string>
    <string name="txt_title">Título</string>
    <string name="hint_title">Título de la operación</string>
    <string name="nueva_deuda">Nueva Deuda</string>
    <string name="usuario_objetivo">Usuario objetivo</string>
    <string name="no_hay_cuentas_ndisponibles">No hay cuentas \ndisponibles</string>
    <string name="ingresos">Ingresos</string>
    <string name="gastos">Gastos</string>
    <string name="titulo_operacion_inicial_cuenta">Monto inicial de cuenta %s</string>
    <string name="descripcion_operacion_inicial_cuenta">Monto inicial de la cuenta.</string>
    <string name="placeholder_titulo">Título</string>
    <string name="account_update_operation_title">Actualización del monto de la cuenta.</string>
    <string name="active_debt_finalization_title">Deuda finalizada de %s </string>
    <string name="passive_debt_finalization_title">Deuda finalizada con %s </string>
    <string name="debt_finalization_description">Finalización de la deuda.</string>
    <string name="contacto_placeholder">Contacto</string>
    <string name="completar_deuda">Completar</string>
    <string name="olvidar_deuda">Olvidar</string>
    <string name="debt_disclaimer">Al completar la deuda se realizará el pago o depósito (según corresponda) en la cuenta especificada.</string>
    <string name="no_hay_operaciones_favoritas">No hay operaciones favoritas</string>
    <string name="hint_seleccionar_cuenta">Seleccionar cuenta</string>
    <string name="active_debt_complete_title">Deuda completada de %s</string>
    <string name="passive_debt_complete_title">Deuda completada con %s</string>
    <string name="origin_transfer_title">Transferencia hacia %s</string>
    <string name="target_transfer_title">Transferencia desde %s</string>
    <string name="transfer_description">Transferencia entre cuentas.</string>

</resources>