<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.EditPendingPaymentFragment"
    android:paddingHorizontal="@dimen/horizontal_fragment_padding">

    <TextView
        android:id="@+id/textView_editPendingPaymentFragment_Amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/textInputLayout_editPendingPaymentFragment_amount"
        android:text="@string/txt_amount"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_editPendingPaymentFragment_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_editPendingPaymentFragment_Amount"
        app:startIconDrawable="@drawable/ic_coin"
        app:layout_constraintBottom_toTopOf="@id/textView_editPendingPaymentFragment_operationType"
        app:startIconTint="@color/dark_gray"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/hint_amount"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView_editPendingPaymentFragment_operationType"
        android:layout_marginTop="@dimen/line_spacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_editPendingPaymentFragment_amount"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/textInputLayout_editPendingPaymentFragment_operationType"
        android:text="@string/txt_operation_type"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_editPendingPaymentFragment_operationType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_editPendingPaymentFragment_operationType"
        app:startIconDrawable="@drawable/ic_balance"
        app:startIconTint="@color/dark_gray"
        app:endIconMode="dropdown_menu"
        app:layout_constraintBottom_toTopOf="@id/textView_editPendingPaymentFragment_notificationDate"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:hint="@string/hint_operation_type"
        >

        <AutoCompleteTextView
            android:id="@+id/autoCompleteView_editPendingPaymentFragment_operationType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView_editPendingPaymentFragment_notificationDate"
        android:layout_marginTop="@dimen/line_spacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_editPendingPaymentFragment_operationType"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/textInputLayout_editPendingPaymentFragment_notificationDate"
        android:text="@string/txt_notification_date"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_editPendingPaymentFragment_notificationDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_editPendingPaymentFragment_notificationDate"
        app:layout_constraintBottom_toTopOf="@id/textView_editPendingPaymentFragment_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/hint_notificationDate"
        app:startIconDrawable="@drawable/ic_schedule"
        app:startIconTint="@color/dark_gray"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/datePicker_editPendingPaymentFragment_notificationDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:clickable="false"
            android:focusable="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView_editPendingPaymentFragment_description"
        android:layout_marginTop="@dimen/line_spacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_editPendingPaymentFragment_notificationDate"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/textInputLayout_editPendingPaymentFragment_description"
        android:text="@string/txt_description"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_editPendingPaymentFragment_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_editPendingPaymentFragment_description"
        app:layout_constraintBottom_toTopOf="@id/textView_editPendingPaymentFragment_cathegory"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/hint_description"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView_editPendingPaymentFragment_cathegory"
        android:layout_marginTop="@dimen/line_spacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_editPendingPaymentFragment_description"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/txt_cathegory"
        />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_editPendingPaymentFragment_cathegories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_editPendingPaymentFragment_cathegory"
        app:selectionRequired="true"
        app:singleSelection="true"
        >

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/txt_pendingPaymentDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group_editPendingPaymentFragment_cathegories"
        app:layout_constraintBottom_toTopOf="@id/button_editPendingPaymentFragment_add"
        android:text="@string/pending_payment_description"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_editPendingPaymentFragment_add"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_update_operation"
        app:layout_constraintTop_toBottomOf="@id/txt_pendingPaymentDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="25sp"
        android:backgroundTint="@color/mint_green"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        app:cornerRadius="@dimen/button_radius"
        android:paddingVertical="@dimen/button_vertical_padding"
        />

</androidx.constraintlayout.widget.ConstraintLayout>