<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.NewOperationFragment"
    android:paddingHorizontal="@dimen/horizontal_fragment_padding"
    android:paddingVertical="@dimen/horizontal_fragment_padding"
    >

    <TextView
        android:id="@+id/textView_neOperationFragment_sourceAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/textInputLayout_newOperationFragment_sourceAccount"
        android:text="@string/txt_source_account"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_newOperationFragment_sourceAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_neOperationFragment_sourceAccount"
        app:layout_constraintBottom_toTopOf="@id/textView_neOperationFragment_Amount"
        app:startIconDrawable="@drawable/ic_account"
        app:startIconTint="@color/dark_gray"
        app:endIconMode="dropdown_menu"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        >

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_source_account"
            android:inputType="none"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView_neOperationFragment_Amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_newOperationFragment_sourceAccount"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/textInputLayout_newOperationFragment_amount"
        android:text="@string/txt_amount"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_newOperationFragment_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_neOperationFragment_Amount"
        app:startIconDrawable="@drawable/ic_coin"
        app:layout_constraintBottom_toTopOf="@id/textView_neOperationFragment_operationType"
        app:startIconTint="@color/dark_gray"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_amount"
            android:inputType="numberDecimal"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView_neOperationFragment_operationType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_newOperationFragment_amount"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/textInputLayout_newOperationFragment_operationType"
        android:text="@string/txt_operation_type"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_newOperationFragment_operationType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_neOperationFragment_operationType"
        app:startIconDrawable="@drawable/ic_balance"
        app:startIconTint="@color/dark_gray"
        app:endIconMode="dropdown_menu"
        app:layout_constraintBottom_toTopOf="@id/textView_neOperationFragment_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        >

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_operation_type"
            android:inputType="none"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView_neOperationFragment_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_newOperationFragment_operationType"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/textInputLayout_newOperationFragment_description"
        android:text="@string/txt_description"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_newOperationFragment_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_neOperationFragment_description"
        app:layout_constraintBottom_toTopOf="@id/textView_neOperationFragment_cathegory"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_description"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView_neOperationFragment_cathegory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_newOperationFragment_description"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/txt_cathegory"
        />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_newOperationFragment_cathegories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_neOperationFragment_cathegory"
        app:singleSelection="true"
        >

    </com.google.android.material.chip.ChipGroup>



</androidx.constraintlayout.widget.ConstraintLayout>